# Quiz_Game

./: CMakeLists.txt  README.md  easylevel.cpp  hardlevel.cpp  level.cpp  level.h  mediumlevel.cpp  quizpage.cpp  quizpage.h  resources.qrc
